--- a/Ui.Desktop/PrintServiceWindow.xaml
+++ b/Ui.Desktop/PrintServiceWindow.xaml
@@ -5,8 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:De.HsFlensburg.ClientApp011.Ui.Desktop"
         mc:Ignorable="d"
-        Title="PrintServiceWindow" Height="450" Width="800">
+        Title="PrintServiceWindow" Height="300" Width="700">
+    <!-- Height="1024" Width="768" -->
+    <Window.DataContext>
+        <Binding Source="{StaticResource ViewModelLocator}" Path="ThePrintServiceWindowViewModle"></Binding>
+    </Window.DataContext>
+    <Window.IsEnabled>
+        <Binding Source="{StaticResource MessageListener}" Path="BindableProperty"></Binding>
+    </Window.IsEnabled>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <UniformGrid Grid.Column="0" Margin="5" Rows="3">
+            <ListBox Name="BookListBox" ItemsSource="{Binding Path=BookList}" SelectionMode="Extended" SelectedIndex="{Binding SelectedBookIndex}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <CheckBox x:Name="CheckedBooks" >
+                            <TextBlock Text="{Binding Title}"></TextBlock>
+                        </CheckBox>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Button Command="{Binding Path=PrintBooks}">Drucken</Button>
+            <Button>Zurück</Button>
+        </UniformGrid>
+        <UniformGrid Grid.Column="1">
+            <ListView ItemsSource="{Binding BookList}">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Title" DisplayMemberBinding="{Binding Title}"></GridViewColumn>
+                        <GridViewColumn Header="Author" DisplayMemberBinding="{Binding Author}"></GridViewColumn>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </UniformGrid>
     </Grid>
 </Window>
