--- a/Ui.Desktop/MainWindow.xaml
+++ b/Ui.Desktop/MainWindow.xaml
@@ -21,7 +21,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Button Content="Fill BookCollection" Grid.Column="0" HorizontalAlignment="Center"  VerticalAlignment="Center" Width="150" Height="150" Command="{Binding FillBookList}"/>
-        <Button Content="$empty" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150"/>
+        <Button Content="Open New Book" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" Command="{Binding OpenNewBookWindow}"/>
         <Button Content="$empty" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" />
         <Button Content="$empty" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" />
     </Grid>
