--- a/Ui.Desktop/PrintServiceWindow.xaml
+++ b/Ui.Desktop/PrintServiceWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:De.HsFlensburg.ClientApp011.Ui.Desktop"
         mc:Ignorable="d"
-        Title="PrintServiceWindow" Height="300" Width="700">
+        Title="PrintServiceWindow" Height="300" Width="700"
+        x:Name="PrintServiceWindowName">
     <!-- Height="1024" Width="768" -->
     <Window.DataContext>
         <Binding Source="{StaticResource ViewModelLocator}" Path="ThePrintServiceWindowViewModel"></Binding>
@@ -29,7 +30,7 @@
                 </ListBox.ItemTemplate>
             </ListBox>
             <Button Command="{Binding PrintBooks}" Content="Printing"/>
-            <Button Content="Home"/>
+            <Button Command="{Binding CloseWindow}" CommandParameter="{Binding ElementName=PrintServiceWindowName}" Content="Home"/>
         </UniformGrid>
         <UniformGrid Grid.Column="1">
             <StackPanel Margin="0,0,5,0">
