--- a/Ui.Desktop/PrintServiceWindow.xaml
+++ b/Ui.Desktop/PrintServiceWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:De.HsFlensburg.ClientApp011.Ui.Desktop"
         mc:Ignorable="d"
-        Title="PrintServiceWindow" Height="500" Width="700"
+        Title="PrintServiceWindow" Height="500" Width="768"
         x:Name="PrintServiceWindowName">
     <!-- Height="1024" Width="768" -->
     <Window.DataContext>
@@ -25,14 +25,50 @@
                 <RowDefinition Height="50"></RowDefinition>
             </Grid.RowDefinitions>
             <UniformGrid Grid.Row="0">
-                <ListBox x:Name="BookListBox" ItemsSource="{Binding BookList}" SelectionMode="Multiple" SelectedItem="{Binding SelectedBook}" SelectionChanged="{Binding Selected}">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <!--<CheckBox Content="{Binding Title}" IsChecked="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListBoxItem}}, Path=IsSelected}"/>-->
-                            <TextBlock Text="{Binding Title}" />
-                        </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
+                <Grid Grid.Row="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="50"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="18"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <TextBlock Text="All Books" FontWeight="Bold" />
+                        <ListBox Grid.Row="1" x:Name="BookListBox" ItemsSource="{Binding BookList}" SelectionMode="Extended">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Title}" />
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </Grid>
+                    <UniformGrid Grid.Row="1" Columns="2" Rows="1">
+                        <Button Content="Add" Margin="0,5,5,5" CommandParameter="{Binding ElementName=BookListBox, Path=SelectedItems}" Command="{Binding AddSelectedBookToCollection}"/>
+                        <Button Content="Remove" Margin="5,5,0,5" CommandParameter="{Binding ElementName=BookListBox, Path=SelectedItems}" Command="{Binding RemoveSelectedBookToCollection}"/>
+                    </UniformGrid>
+                    <Grid Grid.Row="2">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="18"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Text="Selected Books" FontWeight="Bold" />
+                        <ListView Grid.Row="1" ItemsSource="{Binding CheckedBooks}">
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="ListViewItem">
+                                    <Setter Property="Focusable" Value="False"/>
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Title}" />
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Grid>
+                </Grid>
             </UniformGrid>
             <UniformGrid Grid.Row="1" Columns="2" Rows="1">
                 <Button Command="{Binding PrintBooks}" Content="Print" Margin="0,5,5,5"/>
@@ -45,68 +81,54 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="25"></RowDefinition>
+                <RowDefinition Height="18"></RowDefinition>
                 <RowDefinition Height="300"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
-            <ComboBox x:Name="BookComboBox" Grid.Row="0" Grid.ColumnSpan="2" ItemsSource="{Binding BookList}" Margin="2.5">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Title}" />
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <UniformGrid Grid.Row="1" Grid.Column="0">
-                <StackPanel Margin="0,0,5,0">
-                    <Image Source="{Binding ElementName=BookComboBox, Path=SelectedItem.BindableCoverImage}" Stretch="Uniform" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
-                </StackPanel>
-            </UniformGrid>
-            <UniformGrid Grid.Row="1" Grid.Column="1">
-                <StackPanel>
-                    <TextBlock FontWeight="Bold" Text="Title: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Title}"/>
-                    <TextBlock FontWeight="Bold" Text="Author: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Author}"/>
-                    <TextBlock FontWeight="Bold" Text="Weight: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Weight}"/>
-                    <TextBlock FontWeight="Bold" Text="Size: "/>
-                    <WrapPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Dimension.Height}"/>
-                        <TextBlock Text="x"/>
-                        <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Dimension.Width}"/>
-                        <TextBlock Text="x"/>
-                        <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Dimension.Depth}"/>
-                    </WrapPanel>
-                    <TextBlock FontWeight="Bold" Text="Publisher: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Publisher}"/>
-                    <TextBlock FontWeight="Bold" Text="Bestseller: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Bestseller}"/>
-                    <TextBlock FontWeight="Bold" Text="Genre: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Genre}"/>
-                    <TextBlock FontWeight="Bold" Text="ISBN: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Isbn}"/>
-                    <TextBlock FontWeight="Bold" Text="Description: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Description}" TextWrapping="Wrap"/>
-                </StackPanel>
-            </UniformGrid>
-            <UniformGrid Grid.Row="2" Grid.Column="0">
-                <StackPanel>
-                    <TextBlock FontWeight="Bold" Text="Exctract: "/>
-                    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-                        <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Extract}" TextWrapping="Wrap" />
-                    </ScrollViewer>
-                </StackPanel>
-            </UniformGrid>
-            <UniformGrid Grid.Row="2" Grid.Column="1">
-                <StackPanel>
-                    <TextBlock FontWeight="Bold" Text="Release Date: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.ReleaseDate}"/>
-                    <TextBlock FontWeight="Bold" Text="Language: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Language}"/>
-                    <TextBlock FontWeight="Bold" Text="Edition: "/>
-                    <TextBlock Text="{Binding ElementName=BookComboBox, Path=SelectedItem.Edition}"/>
-                </StackPanel>
-            </UniformGrid>
+            <TextBlock Grid.Row="0" Grid.Column="0" Text="Book Preview" FontWeight="Bold" />
+            <StackPanel Margin="0,0,5,0" Grid.Row="1" Grid.Column="0">
+                <Image Source="{Binding ElementName=BookListBox, Path=SelectedItem.BindableCoverImage}" Stretch="Uniform" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
+            </StackPanel>
+            <StackPanel Grid.Row="1" Grid.Column="1">
+                <TextBlock FontWeight="Bold" Text="Title: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Title}"/>
+                <TextBlock FontWeight="Bold" Text="Author: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Author}"/>
+                <TextBlock FontWeight="Bold" Text="Weight: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Weight}"/>
+                <TextBlock FontWeight="Bold" Text="Size: "/>
+                <WrapPanel Orientation="Horizontal">
+                    <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Dimension.Height}"/>
+                    <TextBlock Text="x"/>
+                    <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Dimension.Width}"/>
+                    <TextBlock Text="x"/>
+                    <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Dimension.Depth}"/>
+                </WrapPanel>
+                <TextBlock FontWeight="Bold" Text="Publisher: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Publisher}"/>
+                <TextBlock FontWeight="Bold" Text="Bestseller: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Bestseller}"/>
+                <TextBlock FontWeight="Bold" Text="Genre: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Genre}"/>
+                <TextBlock FontWeight="Bold" Text="ISBN: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Isbn}"/>
+                <TextBlock FontWeight="Bold" Text="Description: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Description}" TextWrapping="Wrap"/>
+            </StackPanel>
+            <StackPanel Grid.Row="2" Grid.Column="0">
+                <TextBlock FontWeight="Bold" Text="Exctract: "/>
+                <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+                    <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Extract}" TextWrapping="Wrap" />
+                </ScrollViewer>
+            </StackPanel>
+            <StackPanel Grid.Row="2" Grid.Column="1">
+                <TextBlock FontWeight="Bold" Text="Release Date: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.ReleaseDate}"/>
+                <TextBlock FontWeight="Bold" Text="Language: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Language}"/>
+                <TextBlock FontWeight="Bold" Text="Edition: "/>
+                <TextBlock Text="{Binding ElementName=BookListBox, Path=SelectedItem.Edition}"/>
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
