--- a/Ui.Desktop/MainWindow.xaml
+++ b/Ui.Desktop/MainWindow.xaml
@@ -1,4 +1,11 @@
-﻿<Window x:Class="De.HsFlensburg.ClientApp011.Ui.Desktop.MainWindow" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:De.HsFlensburg.ClientApp011.Ui.Desktop" xmlns:viewModels="clr-namespace:De.HsFlensburg.ClientApp011.Logic.Ui;assembly=Logic.Ui" mc:Ignorable="d" Title="MainWindow" Height="450" Width="800">
+﻿<Window x:Class="De.HsFlensburg.ClientApp011.Ui.Desktop.MainWindow" 
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:local="clr-namespace:De.HsFlensburg.ClientApp011.Ui.Desktop" 
+        xmlns:viewModels="clr-namespace:De.HsFlensburg.ClientApp011.Logic.Ui;assembly=Logic.Ui" mc:Ignorable="d" 
+        Title="MainWindow" Height="450" Width="800">
     <Window.DataContext>
         <Binding Source="{StaticResource ViewModelLocator}" Path="TheMainWindowViewModel"></Binding>
     </Window.DataContext>
@@ -11,8 +18,14 @@
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Button Content="Load Collection from *.bmf" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" Command="{Binding LoadFromFile}" />
-        <Button Content="Open PrintService Window" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" Command="{Binding OpenPrintServiceWindow}" />
-        <Button Content="Open Bib Import" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" Command="{Binding OpenNewTexBookCollectionWindow}" />
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Button Content="Load Collection from *.bmf" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" Command="{Binding LoadFromFile}" />
+        <Button Content="Open PrintService Window" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" Command="{Binding OpenPrintServiceWindow}" />
+        <Button Content="Open Bib Import" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" Command="{Binding OpenNewTexBookCollectionWindow}" />
+        <Button Content="Open BookSearcher" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" Command="{Binding OpenBookSearchWindow}" />
+        <Button Content="Open Fabiansmist" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="150" Command="{Binding OpenBookSearchWindow}" />
     </Grid>
 </Window>
