--- a/Ui.Desktop/NewBookEntryWindow.xaml
+++ b/Ui.Desktop/NewBookEntryWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="De.HsFlensburg.ClientApp011.Ui.Desktop.NewBookEntry"
+﻿<Window x:Class="De.HsFlensburg.ClientApp011.Ui.Desktop.NewBookEntryWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
